[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkx"
version = "1.0.2"
authors = [
    { name="Hendrik Roch", email="roch@fias.uni-frankfurt.de" },
    { name="Nils Sass", email="nsass@fias.uni-frankfurt.de" },
    { name="Niklas Götz", email="goetz@fias.uni-frankfurt.de"}
]
description = "Software Package for Analyzing Relativistic Kinematics in Collision eXperiments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English"
]

dependencies = [
    "particle==0.23.0",
    "numpy==1.23.5",
    "scipy==1.10.1",
    "matplotlib==3.7.1",
    "abc-property==1.0",
    "fastjet==3.4.1.2"
]


[project.urls]
"Repository" = "https://github.com/smash-transport/sparkx"
"Bug Tracker" = "https://github.com/smash-transport/sparkx/issues"
"Documentation" = "https://smash-transport.github.io/sparkx/"


