[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparkx"
version = "1.2.1"
authors = [
    { name="Niklas Götz", email="goetz@itp.uni-frankfurt.de"},
    { name="Hendrik Roch", email="hroch@wayne.edu" },
    { name="Nils Sass", email="nsass@itp.uni-frankfurt.de" }
]
description = "Software Package for Analyzing Relativistic Kinematics in Collision eXperiments"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English"
]

dependencies = [
    "particle==0.23.0",
    "numpy>=1.23.5",
    "scipy>=1.10.1",
    "abc-property==1.0",
    "fastjet==3.4.1.3",
    "matplotlib>=3.7.1"
]


[project.urls]
"Repository" = "https://github.com/smash-transport/sparkx"
"Bug Tracker" = "https://github.com/smash-transport/sparkx/issues"
"Documentation" = "https://smash-transport.github.io/sparkx/"


