[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkx"
version = "2.0.0"
authors = [
    { name="Lucas Constantin", email="constantin@itp.uni-frankfurt.de"},
    { name="Niklas Götz", email="goetz@itp.uni-frankfurt.de"},
    { name="Renata Krupczak", email="rkrupczak@physik.uni-bielefeld.de"},
    { name="Hendrik Roch", email="hroch@wayne.edu" },
    { name="Carl Rosenkvist", email="rosenkvist@itp.uni-frankfurt.de"},
    { name="Nils Sass", email="nsass@itp.uni-frankfurt.de" }
]
description = "Software Package for Analyzing Relativistic Kinematics in Collision eXperiments"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English"
]

dependencies = [
    "particle>=0.23.0",
    "numpy>=1.23.5",
    "scipy>=1.10.1",
    "fastjet>=3.4.2.1",
    "matplotlib>=3.7.1"
]

[tool.black]
line-length = 80


[project.urls]
"Repository" = "https://github.com/smash-transport/sparkx"
"Bug Tracker" = "https://github.com/smash-transport/sparkx/issues"
"Documentation" = "https://smash-transport.github.io/sparkx/"
